force-app/main/default/objects/Policy_Endorsement_Term__c/Policy_Endorsement_Term__c.object-meta.xml
<CustomObject>
    <label>Policy Endorsement Term</label>
    <nameField>
        <displayFormat>Term-{000000}</displayFormat>
        <label>Policy Endorsement Term Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Endorsement Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>