force-app/main/default/objects/Policy_Endorsement_Term__c/fields/Endorsement__c.field-meta.xml
<CustomField>
    <fullName>Endorsement__c</fullName>
    <label>Endorsement</label>
    <referenceTo>Policy_Endorsement__c</referenceTo>
    <relationshipLabel>Policy Endorsement Terms</relationshipLabel>
    <relationshipName>Policy_Endorsement_Terms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>